--- a/pages/19619.html
+++ b/pages/19619.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Sandbox in nLab
+      towards a diagrammatic proof of the Poincaré conjecture for knots in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Sandbox
+      towards a diagrammatic proof of the Poincaré conjecture for knots
   </h1>
 
 
@@ -294,6 +294,8 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8893/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -306,27 +308,44 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <p>a &lt; b &lt; c</p>
+      <p>\tableofcontents</p>
+
+<p>\section{Introduction}</p>
+
+<p>This page is unpublished research, intended in the end to become a paper. It aims to give a proof of the restriction of the Poincaré conjecture in its <a class='existingWikiWord' href='/nlab/show/Poincar%C3%A9+conjecture+-+diagrammatic+formulation'> diagrammatic reformulation</a> to the case of a <a class='existingWikiWord' href='/nlab/show/knot+diagram'>knot diagram</a>.</p>
+
+<p>\section{Realisability of a knot diagram}</p>
+
+<p>The key innovation of our approach is will be consideration of the notion of <em>realisability</em> of a knot diagram. In this section, we introduce it, after some preliminaries.</p>
+
+<p>
+<div class='num_defn'>
+<h6>Terminology</h6>
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_d654ebfe2ce26fdecc3204efa1c8ee25bfcb4379_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/link+diagram'>knot diagram</a>, equipped with an <a class='existingWikiWord' href='/nlab/show/orientation'>orientation</a> (either will do). Let <math class='maruku-mathml' display='inline' id='mathml_d654ebfe2ce26fdecc3204efa1c8ee25bfcb4379_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math> be a point of <math class='maruku-mathml' display='inline' id='mathml_d654ebfe2ce26fdecc3204efa1c8ee25bfcb4379_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math>. Label the arcs of <math class='maruku-mathml' display='inline' id='mathml_d654ebfe2ce26fdecc3204efa1c8ee25bfcb4379_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math>. A <em>word in the arcs</em> of <math class='maruku-mathml' display='inline' id='mathml_d654ebfe2ce26fdecc3204efa1c8ee25bfcb4379_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/monomial'>monomial</a> <math class='maruku-mathml' display='inline' id='mathml_d654ebfe2ce26fdecc3204efa1c8ee25bfcb4379_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>a</mi> <mn>1</mn> <mrow><mo>±</mo><mn>1</mn></mrow></msubsup><mi>⋯</mi><msubsup><mi>a</mi> <mi>n</mi> <mrow><mo>±</mo><mn>1</mn></mrow></msubsup></mrow><annotation encoding='application/x-tex'>a_{1}^{\pm 1} \cdots a_{n}^{\pm 1}</annotation></semantics></math>, where <math class='maruku-mathml' display='inline' id='mathml_d654ebfe2ce26fdecc3204efa1c8ee25bfcb4379_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>a</mi> <mn>1</mn></msub><mo>,</mo><mi>…</mi><mo>,</mo><msub><mi>a</mi> <mi>n</mi></msub></mrow><annotation encoding='application/x-tex'>a_{1}, \ldots, a_{n}</annotation></semantics></math> are labels of arcs of <math class='maruku-mathml' display='inline' id='mathml_d654ebfe2ce26fdecc3204efa1c8ee25bfcb4379_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math>.</p>
+
+<p></p>
+</div>
+</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August 26, 2018 at 14:43:59.
-  See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on August 26, 2018 at 14:43:37.
+  See the <a href="https://ncatlab.org/nlab/history/towards a diagrammatic proof of the Poincaré conjecture for knots" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1659" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1659 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/towards+a+diagrammatic+proof+of+the+Poincar%C3%A9+conjecture+for+knots" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/towards a diagrammatic proof of the Poincaré conjecture for knots/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Sandbox" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/towards+a+diagrammatic+proof+of+the+Poincar%C3%A9+conjecture+for+knots" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Sandbox" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/towards+a+diagrammatic+proof+of+the+Poincar%C3%A9+conjecture+for+knots" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Sandbox" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/towards+a+diagrammatic+proof+of+the+Poincar%C3%A9+conjecture+for+knots" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
