--- a/pages/3814.html
+++ b/pages/3814.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1043,12 +1043,13 @@ margin-left: 0em;
 <h3 id='GaugeGroup'>Gauge group</h3>
 
 <p>The <em>exact</em> <a class='existingWikiWord' href='/nlab/show/gauge+group'>gauge group</a> of the standard model is not quite the <a class='existingWikiWord' href='/nlab/show/product+group'>product group</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_cf3c9bbbcdf705dd0d7a59fd3198f8ffa8173bf2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>3</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9b85e5051f19babdabc1d80d7d6d7424dd50e6ba_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>3</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
   U(1) \times SU(2) \times SU(3)
 
 </annotation></semantics></math></div>
 <p>of the <a class='existingWikiWord' href='/nlab/show/circle+group'>circle group</a> with <a class='existingWikiWord' href='/nlab/show/special+unitary+groups'>special unitary groups</a>, but is the <a class='existingWikiWord' href='/nlab/show/quotient+group'>quotient group</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_cf3c9bbbcdf705dd0d7a59fd3198f8ffa8173bf2_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mi>SM</mi></msub><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mo maxsize='1.2em' minsize='1.2em'>(</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>3</mn><mo stretchy='false'>)</mo><mo maxsize='1.2em' minsize='1.2em'>)</mo><mo stretchy='false'>/</mo><msub><mi>ℤ</mi> <mn>6</mn></msub></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation' id='eq:ExactGSM'><span class='maruku-eq-number'>(1)</span><math class='maruku-mathml' display='block' id='mathml_9b85e5051f19babdabc1d80d7d6d7424dd50e6ba_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mi>SM</mi></msub><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mo maxsize='1.2em' minsize='1.2em'>(</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>3</mn><mo stretchy='false'>)</mo><mo maxsize='1.2em' minsize='1.2em'>)</mo><mo stretchy='false'>/</mo><msub><mi>ℤ</mi> <mn>6</mn></msub></mrow><annotation encoding='application/x-tex'>
+  
   G_{SM} 
   \;=\;
   \big(
@@ -1057,18 +1058,37 @@ margin-left: 0em;
   / \mathbb{Z}_6
 
 </annotation></semantics></math></div>
-<p>of that by a <a class='existingWikiWord' href='/nlab/show/cyclic+group'>cyclic group</a> <math class='maruku-mathml' display='inline' id='mathml_cf3c9bbbcdf705dd0d7a59fd3198f8ffa8173bf2_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>6</mn></msub><mo>⊂</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>3</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_6 \subset U(1) \times SU(2) \times SU(3)</annotation></semantics></math> which is the <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroup</a> <a class='existingWikiWord' href='/nlab/show/generators+and+relations'>generated</a> from an element of the form</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_cf3c9bbbcdf705dd0d7a59fd3198f8ffa8173bf2_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><msub><mi>q</mi> <mn>6</mn></msub><mo>,</mo><msub><mi>q</mi> <mn>2</mn></msub><msub><mstyle mathvariant='bold'><mn>1</mn></mstyle> <mn>2</mn></msub><mo>,</mo><msub><mi>q</mi> <mn>3</mn></msub><msub><mstyle mathvariant='bold'><mn>1</mn></mstyle> <mn>3</mn></msub><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>∈</mo><mspace width='thickmathspace'></mspace><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>3</mn><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+<p>of that by a <a class='existingWikiWord' href='/nlab/show/cyclic+group'>cyclic group</a> <math class='maruku-mathml' display='inline' id='mathml_9b85e5051f19babdabc1d80d7d6d7424dd50e6ba_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>6</mn></msub><mo>⊂</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>3</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_6 \subset U(1) \times SU(2) \times SU(3)</annotation></semantics></math> which is the <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroup</a> <a class='existingWikiWord' href='/nlab/show/generators+and+relations'>generated</a> from an element of the form</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9b85e5051f19babdabc1d80d7d6d7424dd50e6ba_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><msub><mi>q</mi> <mn>6</mn></msub><mo>,</mo><msub><mi>q</mi> <mn>2</mn></msub><msub><mstyle mathvariant='bold'><mn>1</mn></mstyle> <mn>2</mn></msub><mo>,</mo><msub><mi>q</mi> <mn>3</mn></msub><msub><mstyle mathvariant='bold'><mn>1</mn></mstyle> <mn>3</mn></msub><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>∈</mo><mspace width='thickmathspace'></mspace><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>3</mn><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
   (q_6, q_2 \mathbf{1}_2, q_3 \mathbf{1}_3) \;\in\;
   U(1) \times SU(2) \times SU(3)
   \,,
 
 </annotation></semantics></math></div>
-<p>where <math class='maruku-mathml' display='inline' id='mathml_cf3c9bbbcdf705dd0d7a59fd3198f8ffa8173bf2_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>q</mi> <mi>n</mi></msub><mo>∈</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>q_n \in U(1)</annotation></semantics></math> denotes an <math class='maruku-mathml' display='inline' id='mathml_cf3c9bbbcdf705dd0d7a59fd3198f8ffa8173bf2_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>th <a class='existingWikiWord' href='/nlab/show/primitive+root+of+unity'>primitive root of unity</a>.</p>
+<p>where <math class='maruku-mathml' display='inline' id='mathml_9b85e5051f19babdabc1d80d7d6d7424dd50e6ba_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>q</mi> <mi>n</mi></msub><mo>∈</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>q_n \in U(1)</annotation></semantics></math> denotes an <math class='maruku-mathml' display='inline' id='mathml_9b85e5051f19babdabc1d80d7d6d7424dd50e6ba_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>th <a class='existingWikiWord' href='/nlab/show/primitive+root+of+unity'>primitive root of unity</a> (e.g. (<a href='#HMY13'>HMY 13, p. 2</a>)), i.e.</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9b85e5051f19babdabc1d80d7d6d7424dd50e6ba_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo>(</mo><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mstyle displaystyle='false'><mfrac><mn>1</mn><mn>6</mn></mfrac></mstyle></mrow></msup><mspace width='thickmathspace'></mspace><mo>,</mo><mspace width='thickmathspace'></mspace><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mstyle displaystyle='false'><mfrac><mn>1</mn><mn>2</mn></mfrac></mstyle></mrow></msup><msub><mstyle mathvariant='bold'><mn>1</mn></mstyle> <mn>2</mn></msub><mspace width='thickmathspace'></mspace><mo>,</mo><mspace width='thickmathspace'></mspace><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mstyle displaystyle='false'><mfrac><mn>1</mn><mn>3</mn></mfrac></mstyle></mrow></msup><msub><mstyle mathvariant='bold'><mn>1</mn></mstyle> <mn>3</mn></msub><mo>)</mo></mrow><mspace width='thickmathspace'></mspace><mo>∈</mo><mspace width='thickmathspace'></mspace><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>3</mn><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+  \left(
+    e^{2 \pi i \tfrac{1}{6}}
+    \;,\; 
+    e^{2 \pi i \tfrac{1}{2}} \mathbf{1}_2\;,\; 
+    e^{2 \pi i \tfrac{1}{3}} \mathbf{1}_3
+  \right) 
+  \;\in\;
+  U(1) \times SU(2) \times SU(3)
+  \,,
 
-<p>(e.g. (<a href='#HMY13'>HMY 13, p. 2</a>)).</p>
+</annotation></semantics></math></div>
+<p>The exact gauge group <a class='maruku-eqref' href='#eq:ExactGSM'>(1)</a> happens to coincide with</p>
 
-<p>(This exact gauge group happens to coincide with the <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroup</a> of the <a class='existingWikiWord' href='/nlab/show/Jordan+algebra'>Jordan algebra</a> <a class='existingWikiWord' href='/nlab/show/automorphism+group'>automorphism group</a> of the <a class='existingWikiWord' href='/nlab/show/octonions'>octonionic</a> <a class='existingWikiWord' href='/nlab/show/Albert+algebra'>Albert algebra</a> that “<a class='existingWikiWord' href='/nlab/show/stabilizer+subgroup'>stabilizes</a> a 4d sub-<a class='existingWikiWord' href='/nlab/show/Minkowski+spacetime'>Minkowski spacetime</a>”, see <a href='Albert+algebra#StabilizerOf4dMinkowskiInsideOctonionicAlbertAlgebra'>there</a> for details).</p>
+<ol>
+<li>
+<p><math class='maruku-mathml' display='inline' id='mathml_9b85e5051f19babdabc1d80d7d6d7424dd50e6ba_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mo stretchy='false'>(</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>2</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>3</mn><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mo>⊂</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>5</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>S(U(2) \times U(3)) \subset SU(5)</annotation></semantics></math> – this is the basis of “<a class='existingWikiWord' href='/nlab/show/grand+unified+theories'>grand unified theories</a>” (<a class='existingWikiWord' href='/nlab/show/GUT'>GUT</a>), speculative extensions of the standard model;</p>
+</li>
+
+<li>
+<p>the <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroup</a> of the <a class='existingWikiWord' href='/nlab/show/Jordan+algebra'>Jordan algebra</a> <a class='existingWikiWord' href='/nlab/show/automorphism+group'>automorphism group</a> of the <a class='existingWikiWord' href='/nlab/show/octonions'>octonionic</a> <a class='existingWikiWord' href='/nlab/show/Albert+algebra'>Albert algebra</a> that “<a class='existingWikiWord' href='/nlab/show/stabilizer+subgroup'>stabilizes</a> a 4d sub-<a class='existingWikiWord' href='/nlab/show/Minkowski+spacetime'>Minkowski spacetime</a>” (see <a href='Albert+algebra#StabilizerOf4dMinkowskiInsideOctonionicAlbertAlgebra'>there</a> for details) – this is part of ongoing speculation that exceptional <a class='existingWikiWord' href='/nlab/show/octonion'>octonionic</a> structures might be behind the standard model.</p>
+</li>
+</ol>
 
 <h2 id='variations_and_generalizations'>Variations and generalizations</h2>
 
@@ -1215,7 +1235,7 @@ margin-left: 0em;
 <p>See also</p>
 
 <ul>
-<li id='HMY13'>Takaaki Hashimoto, Mamoru Matsunaga, Kenta Yamamoto, <em>Quantization of hypercharge in gauge groups locally isomorphic but globally nonisomorphic to <math class='maruku-mathml' display='inline' id='mathml_cf3c9bbbcdf705dd0d7a59fd3198f8ffa8173bf2_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SU</mi><mo stretchy='false'>(</mo><mn>3</mn><msub><mo stretchy='false'>)</mo> <mi>c</mi></msub><mo>×</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><msub><mo stretchy='false'>)</mo> <mi>L</mi></msub><mo>×</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><msub><mo stretchy='false'>)</mo> <mi>Y</mi></msub></mrow><annotation encoding='application/x-tex'>SU(3)_c \times SU(2)_L \times U(1)_Y</annotation></semantics></math></em> (<a href='https://arxiv.org/abs/1302.0669'>arXiv:1302.0669</a>)</li>
+<li id='HMY13'>Takaaki Hashimoto, Mamoru Matsunaga, Kenta Yamamoto, <em>Quantization of hypercharge in gauge groups locally isomorphic but globally nonisomorphic to <math class='maruku-mathml' display='inline' id='mathml_9b85e5051f19babdabc1d80d7d6d7424dd50e6ba_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SU</mi><mo stretchy='false'>(</mo><mn>3</mn><msub><mo stretchy='false'>)</mo> <mi>c</mi></msub><mo>×</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><msub><mo stretchy='false'>)</mo> <mi>L</mi></msub><mo>×</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><msub><mo stretchy='false'>)</mo> <mi>Y</mi></msub></mrow><annotation encoding='application/x-tex'>SU(3)_c \times SU(2)_L \times U(1)_Y</annotation></semantics></math></em> (<a href='https://arxiv.org/abs/1302.0669'>arXiv:1302.0669</a>)</li>
 </ul>
 
 <p>For further references see <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> and the Wikipedia entry</p>
@@ -1227,14 +1247,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on August 27, 2018 at 14:03:56.
+  Last revised on August 27, 2018 at 15:40:53.
   See the <a href="https://ncatlab.org/nlab/history/standard model of particle physics" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/standard+model+of+particle+physics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/standard+model+of+particle+physics/32" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(32 revisions)</span> | <a href="/nlab/show/diff/standard+model+of+particle+physics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/standard+model+of+particle+physics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/standard+model+of+particle+physics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/standard+model+of+particle+physics/33" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(33 revisions)</span> | <a href="/nlab/show/diff/standard+model+of+particle+physics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/standard+model+of+particle+physics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/standard model of particle physics/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
