--- a/pages/19622.html
+++ b/pages/19622.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Sandbox in nLab
+      non-canonical isomorphism in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Sandbox
+      non-canonical isomorphism
   </h1>
 
 
@@ -294,6 +294,8 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8899/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -306,69 +308,45 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_6fc6cbcd8a72f6536770a6438b266f999225423f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo>(</mo><mi>diag</mi><mrow><mo>(</mo><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mstyle displaystyle='false'><mfrac><mn>1</mn><mn>3</mn></mfrac></mstyle></mrow></msup><mo>)</mo></mrow><mspace width='thickmathspace'></mspace><mo>,</mo><mspace width='thickmathspace'></mspace><munder><munder><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>diag</mi><mrow><mo>(</mo><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mstyle displaystyle='false'><mfrac><mn>1</mn><mn>3</mn></mfrac></mstyle></mrow></msup><mo>)</mo></mrow></mrow><mo>⏟</mo></munder><mrow><mo>=</mo><mi>diag</mi><mrow><mo>(</mo><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mstyle displaystyle='false'><mfrac><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow><mn>6</mn></mfrac></mstyle></mrow></msup><mo>)</mo></mrow></mrow></munder><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><msub><mstyle mathvariant='bold'><mn>1</mn></mstyle> <mn>2</mn></msub><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>,</mo><mspace width='thickmathspace'></mspace><mi>diag</mi><mrow><mo>(</mo><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mstyle displaystyle='false'><mfrac><mn>1</mn><mn>3</mn></mfrac></mstyle></mrow></msup><mo>)</mo></mrow><msub><mstyle mathvariant='bold'><mn>1</mn></mstyle> <mn>3</mn></msub><mo>)</mo></mrow></mrow><annotation encoding='application/x-tex'>
-  \left(
-    diag\left( e^{2\pi i \tfrac{1}{3}}  \right)\;,\;
-    \underset{ 
-      = diag\left( e^{2\pi i \tfrac{-1}{6}} \right)
-    }{
-    \underbrace{
-      -diag\left( e^{2\pi i \tfrac{1}{3}}  \right)
-    }} (-\mathbf{1}_2)\;,\;
-    diag\left( e^{2\pi i \tfrac{1}{3}}  \right) \mathbf{1}_3
-  \right)
+      <h1 id='noncanonical_isomorphisms'>Non-canonical isomorphisms</h1>
 
-</annotation></semantics></math></div>
-<p><h1 id='section_table_of_contents'>Contents</h1>
-<div class='maruku_toc'>
+<h2 id='idea'>Idea</h2>
+
+<p>Often in <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a>, requirements that certain things “be isomorphic” are more precisely stated as saying that a certain “canonical” morphism is invertible. However, in certain situations, it happens that the existence of a non-canonical isomorphism automatically <em>entails</em> the “correct” stronger property that the canonical morphism is invertible.</p>
+
+<p>For now, see the references for details.</p>
+
+<h2 id='references'>References</h2>
+
 <ul>
-<li><a href='#section_Hello'>Hello</a></li>
-<ul>
-<li><a href='#section_Hello_hello'>Hello hello</a></li>
+<li id='Lack09'>
+<p><a class='existingWikiWord' href='/nlab/show/Stephen+Lack'>Stephen Lack</a>, <em>Non-canonical isomorphisms</em>, (<a href='http://arxiv.org/abs/0912.2126'>arXiv:0912.2126</a>).</p>
+</li>
+
+<li>
+<p><span class='newWikiWord'>Fernando Lucatelli Nunes<a href='/nlab/new/Fernando+Lucatelli+Nunes'>?</a></span>, <em>Pseudoalgebras and non-canonical isomorphisms</em>, <a href='https://arxiv.org/abs/1711.02051'>arxiv</a></p>
+</li>
 </ul>
-<li><a href='#section_Hei'>Hei</a></li>
-<ul>
-<li><a href='#section_Hello_hello'>Hello hello</a></li>
-<ul>
-<li><a href='#section_Hello_hello_hello'>Hello hello hello</a></li>
-</ul>
-<li><a href='#section_Hello_hello'>Hello hello</a></li>
-</ul>
-</ul>
-</div>
-</p>
-<h2 id='section_Hello'>Hello</h2>
-<p>Bonjour</p>
-<h3 id='section_Hello_hello'>Hello hello</h3>
-<p>Bonjour</p>
-<h2 id='section_Hei'>Hei</h2>
-<p>Bonjour</p>
-<h3 id='section_Hello_hello'>Hello hello</h3>
-<p>Grand!</p>
-<h4 id='section_Hello_hello_hello'>Hello hello hello</h4>
-<p>Nearly finished</p>
-<h3 id='section_Hello_hello'>Hello hello</h3>
-<p>Finished</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August 27, 2018 at 17:21:31.
-  See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on August 27, 2018 at 17:00:56.
+  See the <a href="https://ncatlab.org/nlab/history/non-canonical isomorphism" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1663" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1663 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/non-canonical+isomorphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/non-canonical isomorphism/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Sandbox" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/non-canonical+isomorphism" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Sandbox" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/non-canonical+isomorphism" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Sandbox" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/non-canonical+isomorphism" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
